--- a/index.html
+++ b/index.html
@@ -45,12 +45,13 @@
         <section id="tropicalia" class="my-5 pt-6 secao-tropicalia">
             <div class="container d-flex align-items-center ">
                   <div class="col-5">
-                    <h2>O que foi a Tropicália?</h2>
-                    <p class="p-2">A Tropicália, também conhecida como Tropicalismo, foi um movimento cultural
-                        brasileiro que surgiu na década de 1960, tendo seu auge entre 1967 e 1968. Esse movimento
-                        abrangeu várias expressões artísticas, como a música, o cinema, o teatro e as artes plásticas, e
-                        teve como principal característica a mistura de elementos da cultura brasileira tradicional com
-                        influências estrangeiras, especialmente do rock e da música pop.</p>
+                    <h2>o que é São paulo Futebol Clube?</h2>
+                    <p class="p-2">No futebol, é um dos clubes mais bem sucedidos do Brasil, sendo que, dentre seus principais títulos, destacam-se duas Copas Intercontinentais e uma Copa do Mundo de Clubes da FIFA (três mundiais, recorde absoluto a nível nacional), três Copas Libertadores (recorde nacional compartilhado com Flamengo, Grêmio, Palmeiras e Santos), uma Copa Sul-Americana, seis Campeonatos Brasileiros, uma Copa do Brasil e vinte e dois Campeonatos Paulistas. Quanto a títulos internacionais, o São Paulo, com 12 conquistas, é o terceiro clube da América do Sul com o maior número de troféus, ficando atrás somente de Boca Juniors e Independiente. No que diz respeito ao somatório de títulos oficiais de abrangência nacional e internacional de clubes brasileiros, em janeiro de 2025, o São Paulo figurava como o terceiro maior campeão do Brasil, com 20 conquistas, atrás apenas do Palmeiras (com 24 conquistas) e do Flamengo (com 22); o São Paulo se tornou em 2024 o único a conquistar todos os títulos atualmente em disputa que um clube brasileiro pode vencer.
+                        A agremiação também possui tradição em outros esportes que não o futebol, como no atletismo, no qual seu atleta na modalidade salto triplo, Adhemar Ferreira da Silva, foi o primeiro bicampeão olímpico do país (Olimpíadas de Helsinque em 1952 – em que superou o recorde mundial na modalidade – e Olimpíadas de Melbourne em 1956). Depois de Helsinque, Adhemar superou pela segunda vez o recorde mundial na modalidade, nos Jogos Pan-Americanos do México em 1955. Esses recordes são representados pelas duas estrelas douradas no escudo do clube.
+                        No Ranking da CBF de dezembro de 2024, que mede apenas o desempenho dos últimos cinco anos, o São Paulo figura em 2º lugar. No Ranking CONMEBOL de dezembro de 2024, que leva em conta apenas os resultados obtidos nas últimas dez edições de competições organizadas na América do Sul pela entidade, o São Paulo aparece em 8º e é o 4º entre os clubes brasileiros. Já em março de 2024, para a IFFHS, órgão de estatística reconhecido pela FIFA e que produz anualmente um ranking de clubes, o Tricolor Paulista é o 29º melhor clube do mundo, 5º da América do Sul e 4º melhor do Brasil. A mesma IFFHS elegeu o São Paulo como o melhor time brasileiro da década de 2001–2010, e o segundo na América do Sul, atrás do Boca Juniors, da Argentina. 
+
+                        O São Paulo também é um dos dois clubes do chamado G-12 que nunca foram rebaixados para a segunda divisão no Campeonato Brasileiro. Fonte: wikipédia
+                        .</p>
                 </div>
             </div>
         </section>
